[tool.poetry]
name = "counties-scraper"
version = "0.1.0"
description = ""
authors = ["Yehor Sencha <senyehor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
